--- a/index.html
+++ b/index.html
@@ -13,16 +13,24 @@
 <body>
 	<!-- Begin of header -->
 	<header class="header">
-		<h1>Бентега непозбувна, <br>або<br>
-			Пострефлексійний емпатійний синдром
+		<h1>
+			'Бентега непозбувна',<br>
+			або<br>
+			'Пострефлексійний емпатійний синдром'</i></strong>
 		</h1>
+		<p class="bookTitle"><strong><i>
+			Щоденник емпата:
+		</p>
 	</header>
 	<!-- End of header -->
 
 	<!-- Main -->
 	<main class="main">
 		<article class="text-wrapper">			
-		
+			<img src="images/index-0001.jpg">
+			<img src="images/index-0002.jpg">
+			<img src="images/index-0003.jpg">
+			<img src="images/index-0004.jpg">
 		</article>	
 	</main>
 	<!-- End of main -->
