--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>a little story</title>
+	<title>an empath diary</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- include a file with css to this document -->
@@ -26,12 +26,29 @@
 
 	<!-- Main -->
 	<main class="main">
-		<article class="text-wrapper">			
-			<img src="images/index-0001.jpg">
-			<img src="images/index-0002.jpg">
-			<img src="images/index-0003.jpg">
-			<img src="images/index-0004.jpg">
-		</article>	
+		<section class="text-wrapper">
+			<div class="story">
+				<a href="index-0001.html" title="Він колись це припинить">
+					<img src="images/index-0001.jpg" alt="Він колись це припинить">
+				</a>
+			</div>
+			<div>
+				<a href="index-0002.html" title="..а поговорити?">
+					<img src="images/index-0002.jpg" alt="..а поговорити?">
+				</a>
+			</div>
+			<div>
+				<a href="index-0003.html" title="Жінки, Вогонь та Небезпечні речі.">
+					<img src="images/index-0003.jpg" alt="Жінки, Вогонь та Небезпечні речі.">
+				</a>
+			</div>
+			<div>
+				<a href="index-0004.html" title="… через місток до Нірвани …">
+					<img src="images/index-0004.jpg" alt="… через місток до Нірвани …">
+				</a>
+			</div>
+
+		</section>
 	</main>
 	<!-- End of main -->
 
