--- a/index-0004.html
+++ b/index-0004.html
@@ -7,7 +7,7 @@
 	<!-- include a file with css to this document -->
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style-box-sizing.css">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">	
+	<link rel="stylesheet" type="text/css" href="css/styles4articles.css">	
 	<!-- include a file with js to this document -->	
 </head>
 <body>
