--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<h1>
 			'Бентега непозбувна',<br>
 			або<br>
-			'Пострефлексійний емпатійний синдром'</i></strong>
+			'Пострефлексійний емпатійний синдром'
 		</h1>
-		<p class="bookTitle"><strong><i>
-			Щоденник емпата:
+		<p class="bookTitle"><strong>
+			<i>Щоденник емпата:</i>
 		</p>
 	</header>
 	<!-- End of header -->
