--- a/index-0001.html
+++ b/index-0001.html
@@ -7,6 +7,22 @@
 	<!-- include a file with css to this document -->
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style-box-sizing.css">
+	<style>
+		body:before {
+		  	content: '';
+		  	background-image: url('images/index-0001.jpg');
+		  	background-position: center;
+		  	background-size: cover;
+			position: fixed;
+		  	left: 0;
+		  	top: 0;
+		  	bottom: 0;
+		  	width: 100vw;    
+		  	opacity: 0.2;
+		  	z-index: -1;
+		  	height: 100vh;
+		}
+	</style>
 	<link rel="stylesheet" type="text/css" href="css/styles4articles.css">	
 	<!-- include a file with js to this document -->	
 </head>
