--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 					<img src="images/index-0001.jpg" alt="Він колись це припинить">
 				</a>
 			</div>
-			<div>
+			<div class="story">
 				<a href="index-0002.html" title="..а поговорити?">
 					<img src="images/index-0002.jpg" alt="..а поговорити?">
 				</a>
 			</div>
-			<div>
+			<div class="story">
 				<a href="index-0003.html" title="Жінки, Вогонь та Небезпечні речі.">
 					<img src="images/index-0003.jpg" alt="Жінки, Вогонь та Небезпечні речі.">
 				</a>
 			</div>
-			<div>
+			<div class="story">
 				<a href="index-0004.html" title="… через місток до Нірвани …">
 					<img src="images/index-0004.jpg" alt="… через місток до Нірвани …">
 				</a>
