--- a/index-0004.html
+++ b/index-0004.html
@@ -95,7 +95,7 @@
 		<p>
 			А спогади Зірочками спалахують і спалахують.
 		<p>
-			А ти все так стоїш і стоїш: закинула головоньку назад, видивляючи його в синьому небі його очей. 
+			А ти все так стоїш і стоїш: закинула голівоньку назад, видивляючи його в синьому небі його очей. 
 		</p>
 		<p>
 			Високі підбори – щоб бути вищою, ближче до свого Неба. І нехай навшпиньки – зрештою, як відчувала, завчасно пішла на йогу, саме пік форми.
