--- a/index-0001.html
+++ b/index-0001.html
@@ -182,7 +182,7 @@
 			Але є й одне але. В Ідеалі Ідеальна жінка - неможлива самотньою. Самотність, в якійсь мірі, підрізає їй крила. Ось звідси й її «Червонокнижність».
 		</p>
 		<p>
-			Тому, яким би ненависним не був Шопенгауер до жінок, він їх й визнає в той же час.
+			Тому, яким би ненависним не був Шопенгауер до жінок, він їх й визнає водночас.
 		</p>		
 
 	</article>
