--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
 					<img src="images/index-0004.jpg" alt="… через місток до Нірвани …">
 				</a>
 			</div>
+			<div class="story">
+				<a href="index-0005.html" title="Дежавю">
+					<img src="images/index-0005.jpg" alt="Дежавю">
+				</a>
+			</div>
 
 		</section>
 	</main>
