--- a/index-0005.html
+++ b/index-0005.html
@@ -134,6 +134,11 @@
 			- тепер жоден найдосвідченіший адвокат не візьметься опротестовувати пожиттєве, довічне, з усіма наслідками....
 		</p>
 		
+		<img class="text-separator" src="images/text-separator.png">
+
+		<a href="index.html" title="Повернутись до Щоденника">Повернутись до Щоденника</a>
+
+		
 	</article>
 </body>
 </html>
