--- a/index-0004.html
+++ b/index-0004.html
@@ -111,7 +111,13 @@
 		</p>		
 		<p>
 			Вільним Птахом, якого з Небом поєднано єдиною Долею.
-		</p>		
+		</p>	
+		
+		<img class="text-separator" src="images/text-separator.png">
+
+		<a href="index.html" title="Повернутись до Щоденника">Повернутись до Щоденника</a>
+		
 	</article>
 </body>
+
 </html>
