--- a/index-0003.html
+++ b/index-0003.html
@@ -191,9 +191,12 @@
 
 		<img class="text-separator" src="images/text-separator.png">
 		
+		<a href="index.html" title="Повернутись до Щоденника">Повернутись до Щоденника</a>
+		
 		<p class="copyrightOf">
 			Красно дякую <a href="https://www.facebook.com/helena.vishnevska/posts/3673048036104333">Helena Vishnevska</a> за дозвіл використати малюнок як ілюстрацію до оповідання.
 		</p>
 	</article>
 </body>
+
 </html>
