--- a/index-0002.html
+++ b/index-0002.html
@@ -164,6 +164,12 @@
 		<p>
 			-	Кохана, цееее тааакииииййййй косссссмммоооооссссссс…
 		</p>
+		
+		<img class="text-separator" src="images/text-separator.png">
+
+		<a href="index.html" title="Повернутись до Щоденника">Повернутись до Щоденника</a>
+		
 	</article>
 </body>
+
 </html>
