--- a/index-0001.html
+++ b/index-0001.html
@@ -148,6 +148,11 @@
 			Ходить легенда, що він живе десь у горах, хоча й його дім ніколи ніхто не знаходив.
 		</p>
 
+		<img class="text-separator" src="images/text-separator.png">
+
+		<a href="index.html" title="Повернутись до Щоденника">Повернутись до Щоденника</a>
+		
 	</article>
 </body>
 </html>
+
