--- a/index-0005.html
+++ b/index-0005.html
@@ -44,7 +44,7 @@
 			- я все намагаюсь збагнути, як так з першого повільного танцю в тебе вийшла та магія, дякуючи якій я й досі не можу прийти до тями, поринувши в найромантичніші почуття..
 		</p>
 		<p>
-			- красно пані, мушу скористатись 5ю поправкою конституції, котра гарантує право не свідчити проти самого себе, особливо коли йдеться про конвенцію 'порушення законів ведення війни'. Тому єдина можливість з'ясувати мотиви, обставини та характер злочину - рольова гра в слідчий експеримент, де на правах слідчої ви вимагаєте від того хто під слідством під особисте зобов'язання з'явитись на слідчий експеримент по відтворенню злочину та піддаванню його ретельній рефлексії, аж до встановлення істини для винесення вироку.
+			- красно пані, мушу скористатись 5-ю поправкою конституції, котра гарантує право не свідчити проти самого себе, особливо коли йдеться про конвенцію 'порушення законів ведення війни'. Тому єдина можливість з'ясувати мотиви, обставини та характер злочину - рольова гра в слідчий експеримент, де на правах слідчої ви вимагаєте від того хто під слідством під особисте зобов'язання з'явитись на слідчий експеримент по відтворенню злочину та піддаванню його ретельній рефлексії, аж до встановлення істини для винесення вироку.
 		</p>
 		<p>
 			- що ж, з огляду на потребу встановити істину по гарячих тригер.. слідах - призначаю слідчі дії на завтра, на 19:00.
@@ -67,24 +67,24 @@
 			- я все намагаюсь збагнути, як так з першого повільного танцю в тебе вийшла та магія, дякуючи якій я й досі не можу прийти до тями...
 		</p>
 		<p>
-			Тому що це мав сказати він, хоча й трохи іншими словами, але ж вона випередила його на якусь мить, бо довго наважувався, неначе боявся поспіху. Але більше переймався здатися зарозумілим, бо ось так в одному реченні як вона не зміг би водночас і виказати свої почуття і поділитись думками. Думками про те, чи можливе кохання з першого погляду і, якщо так, то чи не є відчуття стану дежавю його вірною ознакою.
+			Тому що це мав сказати він, хоча й трохи іншими словами, але ж вона випередила його на якусь мить, бо довго наважувався, неначе боявся поспіху. Але більше переймався здатися зарозумілим, бо ось так в одному реченні як вона не зміг би водночас і виказати свої почуття і поділитись думками. Думками про те, чи можливе кохання з першого погляду і, якщо так, - чи не є відчуття стану дежавю його вірною ознакою.
 		</p>
 		<p>
 			Думками, які складалися в пазл роками, думками - вартими окремого побачення, щоб спробувати пояснити.
 		</p>
 		<p>
-			І був певен, що пояснити це легко. Бо це - щиро, і це про мрії.
+			І був певен, що пояснити це легко. Бо це - щиро, це - про мрії.
 		</p>
 		<p>
 			Мрії про щось важливе, щось що вартує всього життя. Не чогось швидкоплинного, як то розваг чи модних віянь. Чогось, що з часом лише викарбовується водночас чіткіше, та, в той же час - позбавляючись зайвого, несуттєвого.  І найбільша дивина в тому, що це не зовсім стосується того, що ти бачиш. Це більш про те, що ти відчуваєш. Бо це про кохання.
 		</p>
 		<p>
-			Так, мріючи про нього, вигадуєш кожного разу нову історію, або вдосконалюєш все більш коштовними перлинами ту, що ще не вичерпалась в емоціях, допоки не доведеш до ідеалу. Мріючи, уявляєш приємність доторку до її руки, ваші обійми, як гладиш її голівку на своєму плечіі, ніжно тонучи пальцями в її волоссі. Такі почуття, про які хтось давно сказав, що близькість особливо приємно з тим, з ким особливо приємно і без близькості.
+			Так, мріючи про нього, вигадуєш кожного разу нову історію, або вдосконалюєш все більш коштовними перлинами ту, що ще не вичерпалася в емоціях, допоки не доведеш до ідеалу. Мріючи, уявляєш приємність доторку до її руки, ваші обійми, як гладиш її голівку на своєму плечі, ніжно тонучи пальцями в її волоссі. Такі почуття, про які хтось давно сказав, що близькість особливо приємно з тим, з ким особливо приємно і без близькості.
 		<p>
 			Ти давно перестав вигадувати якою вона має бути, що робити в житті, бо багато разів ловив себе на думці, що ось хтось ідеально відповідає всім канонам, а в тебе жодного відгуку. І навпаки - дивуєшся, що несподівано відчуваєш симпатію за межами омріяних "шкал та стандартів". 
 		</p>
 		<p>
-			Тому залишив собі єдиний стандарт, єдину шкалу - власні почуття. Ті, особливо приємні, коли досить будти поруч. 
+			Тому залишив собі єдиний стандарт, єдину шкалу - власні почуття. Ті, особливо приємні, коли досить бути поруч. 
 		</p>
 		<p>
 			І ось, коли двоє відчувають взаємно цю особливу приємність поруч одне одного, можливо саме тоді й виникає це дивовижне відчуття знайомості.
@@ -116,13 +116,13 @@
 			- як так, то нехай це вже буде 'контрольний постріл', яким всі шкали буде розбалансовано, і грець з ним з тим експериментом..
 		</p>
 		<p>
-			Вони зашарілася ще більше. 
+			Вона зашарілася ще більше. 
 		</p>		
 		<p>
 			На якусь мить час зупинився для обох. 
 		</p>
 		<p>
-			- горіла хата, гори і сарай, сказала вона і ще повільніше за нього наблизила своє обличчя до його, не відриваючи погляду, і, обійнявши, заплющивши очі, дуже ніжно поцілувала його в уста.... Поцілунок тривав одну, дві хвилини...
+			- горіла хата, гори і сарай, сказала вона і, ще повільніше за нього, наблизила своє обличчя до його, не відриваючи погляду, і, обійнявши, заплющивши очі, дуже ніжно поцілувала його в уста.... Поцілунок тривав одну, дві хвилини...
 		</p>		
 		<p>
 			Після чого, не розриваючи обіймів, вона поклала голову йому на плече, носиком та устами ніжно торкаючись його шиї ..
@@ -141,4 +141,5 @@
 		
 	</article>
 </body>
+
 </html>
